# Cyberpunk-Inventory-Management-System

./: .gitignore  README.md  docker-compose.yml  example.env  pyproject.toml
src/inventory_management_system/: Dockerfile
src/inventory_management_system/app/: main.py
src/inventory_management_system/app/routers/: example_router.py  main_router.py
src/inventory_management_system/app/settings/: config.py
