[tool.poetry]
name = "cyberpunk-inventory-management-system"
version = "0.1.0"
description = ""
authors = ["andriydubinyak"]
readme = "README.md"

# System
[tool.poetry.dependencies]
python = "^3.12"
black = "^24.2.0"


# Inventory Management system pacakges
[tool.poetry.group.inventory_management]
optional = true

[tool.poetry.group.inventory_management.dependencies]
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 80
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    |^temp|
    |ignore
  )/
  | pyproject.toml
)
'''